# visp

./: .gitignore  DEVELOPMENT.md  MARKETING.md  README.md  TODO.md  bts.jsonc  compose.test.yml  compose.yml  package.json  tsconfig.json
.github/workflows/: obs-plugin.yml
apps/fumadocs/: README.md  package.json  vite.config.ts
apps/fumadocs/content/docs/: architecture.mdx  broadcaster-setup.mdx  deployment.mdx  development.mdx  get-started.mdx  index.mdx  meta.json  obs-remote-control.mdx  phone-app.mdx  releases.mdx  self-hosting.mdx  video-source.mdx
apps/fumadocs/src/lib/: i18n.ts  layout.shared.tsx  shared.ts
apps/fumadocs/src/routes/: __root.tsx  index.tsx  sitemap[.]xml.ts
apps/native/: .env.example  .gitignore  README.md  app.json  package.json  visp-obs-1.0.17-macos-universal.pkg
apps/native/ios/: Podfile  Podfile.properties.json
apps/native/ios/VISP/: Info.plist  SplashScreen.storyboard
apps/native/ios/VISP.xcodeproj/: project.pbxproj
apps/native/ios/VISP.xcworkspace/: contents.xcworkspacedata
apps/native/modules/visp-srt/: Package.swift  index.ts  with-root-encoder.cjs
apps/native/scripts/: sync-haishinkit.rb
apps/native/src/app/: _layout.tsx  index.tsx
apps/native/src/components/: floating-chat.tsx  obs-control-button.tsx  stream-info-sheet.tsx
apps/native/src/lib/: analytics.ts  analytics.web.ts  audio-level.test.ts  audio-level.ts  backend.ts  camera-preferences.ts  camera-settings.test.ts  camera-settings.ts  chat-model.ts  chat-preferences.test.ts  chat-preferences.ts  configure-video-capture.ts  live-chat.test.ts  live-chat.ts  stream-info-model.test.ts  (+8 more)
apps/obs-plugin/: CMakeLists.txt  README.md  buildspec.json
apps/obs-plugin/src/: plugin-main.cpp
apps/server/: .env.example  package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: app.ts  chat.ts  index.ts  machine.integration.test.ts  machine.test.ts  machine.ts  seppo.test.ts  seppo.ts  test-env.ts
apps/web/: .env.example  components.json  nitro.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web/.claude/: CLAUDE.md
apps/web/src/: index.css  routeTree.gen.ts  router.tsx
deploy/: README.md  UPDATE.md  visp-release  visp-release-bootstrap
deploy/app/: Caddyfile
deploy/local/: Caddyfile  mediamtx.Dockerfile
deploy/relay/: Caddyfile  mediamtx.static-auth.yml  mediamtx.yml  visp-snapshot
deploy/systemd/: caddy-app.conf  mediamtx.service  visp-server.service  visp-web.service
scripts/: dev.test.ts  dev.ts  test-integration.sh
(+72 files in other folders)
